--- a/index.html
+++ b/index.html
@@ -1,80 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Time tracking dashboard</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>Frontend Mentor | Time tracking dashboard</title>
+  </head>
+  <body>
+    <main class="wrapper">
+      <div class="profile">
+        <div class="profile-info">
+          <div class="profile-image">
+            <img src="./images/image-jeremy.png" alt="Jeremy Robson" />
+          </div>
+          <div class="profile-name">
+            <h1><span>Report for</span>Jeremy Robson</h1>
+          </div>
+        </div>
+        <div class="filter-buttons">
+          <button class="btn">Daily</button>
+          <button class="btn">Weekly</button>
+          <button class="btn">Monthly</button>
+        </div>
+      </div>
 
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="card-container">
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-work.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Work</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>5hrs</p>
+            <p><span>Yesterday</span> - <span>7hrs</span></p>
+          </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-play.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Play</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>1hr</p>
+            <p><span>Yesterday</span> - <span>2hrs</span></p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-study.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Study</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>0hrs</p>
+            <p><span>Yesterday</span> - <span>1hr</span></p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-exercise.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Exercise</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>1hr</p>
+            <p><span>Yesterday</span> - <span>1hr</span></p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-social.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Social</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>1hr</p>
+            <p><span>Yesterday</span> - <span>3hrs</span></p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-img">
+            <img src="./images/icon-self-care.svg" alt="" />
+          </div>
+          <div class="card-header">
+            <h2>Self Care</h2>
+            <img src="./images/icon-ellipsis.svg" alt="" />
+          </div>
+          <div class="card-content">
+            <p>0hrs</p>
+            <p><span>Yesterday</span> - <span>1hr</span></p>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
