Added styles for profile-info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <img src="./images/image-jeremy.png" alt="Jeremy Robson" />
           </div>
           <div class="profile-name">
-            <h1><span>Report for</span>Jeremy Robson</h1>
+            <span class="text-6-regular">Report for</span>
+            <h1 class="text-4-light">Jeremy Robson</h1>
           </div>
         </div>
         <div class="filter-buttons">
