Added styles for profiile-buttons

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h1 class="text-4-light">Jeremy Robson</h1>
           </div>
         </div>
-        <div class="filter-buttons">
-          <button class="btn">Daily</button>
-          <button class="btn">Weekly</button>
-          <button class="btn">Monthly</button>
+        <div class="profile-buttons">
+          <button class="btn text-5-regular">Daily</button>
+          <button class="btn text-5-regular active">Weekly</button>
+          <button class="btn text-5-regular">Monthly</button>
         </div>
       </div>
 
