--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Time tracking dashboard</title>
   </head>
   <body>
@@ -37,81 +40,96 @@
       </div>
 
       <div class="card-container">
-        <div class="card">
+        <div class="card card-1">
           <div class="card-img">
             <img src="./images/icon-work.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Work</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>5hrs</p>
-            <p><span>Yesterday</span> - <span>7hrs</span></p>
+            <div class="card-header">
+              <h2 class="text-5-medium">Work</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-text">
+              <p class="text-3-light">5hrs</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>7hrs</span>
+              </p>
+            </div>
           </div>
-        <div class="card">
+        </div>
+        <div class="card card-2">
           <div class="card-img">
             <img src="./images/icon-play.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Play</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>1hr</p>
-            <p><span>Yesterday</span> - <span>2hrs</span></p>
+            <div class="card-header">
+              <h2>Play</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-text">
+              <p>1hr</p>
+              <p><span>Yesterday</span> - <span>2hrs</span></p>
+            </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-3">
           <div class="card-img">
             <img src="./images/icon-study.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Study</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>0hrs</p>
-            <p><span>Yesterday</span> - <span>1hr</span></p>
+            <div class="card-header">
+              <h2>Study</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-text">
+              <p>0hrs</p>
+              <p><span>Yesterday</span> - <span>1hr</span></p>
+            </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-4">
           <div class="card-img">
             <img src="./images/icon-exercise.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Exercise</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>1hr</p>
-            <p><span>Yesterday</span> - <span>1hr</span></p>
+            <div class="card-header">
+              <h2>Exercise</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-text">
+              <p>1hr</p>
+              <p><span>Yesterday</span> - <span>1hr</span></p>
+            </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-5">
           <div class="card-img">
             <img src="./images/icon-social.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Social</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>1hr</p>
-            <p><span>Yesterday</span> - <span>3hrs</span></p>
+            <div class="card-header">
+              <h2>Social</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-content">
+              <p>1hr</p>
+              <p><span>Yesterday</span> - <span>3hrs</span></p>
+            </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card card-6">
           <div class="card-img">
             <img src="./images/icon-self-care.svg" alt="" />
           </div>
-          <div class="card-header">
-            <h2>Self Care</h2>
-            <img src="./images/icon-ellipsis.svg" alt="" />
-          </div>
           <div class="card-content">
-            <p>0hrs</p>
-            <p><span>Yesterday</span> - <span>1hr</span></p>
+            <div class="card-header">
+              <h2>Self Care</h2>
+              <img src="./images/icon-ellipsis.svg" alt="" />
+            </div>
+            <div class="card-content">
+              <p>0hrs</p>
+              <p><span>Yesterday</span> - <span>1hr</span></p>
+            </div>
           </div>
         </div>
       </div>
