--- a/index.html
+++ b/index.html
@@ -63,12 +63,14 @@
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h2>Play</h2>
+              <h2 class="text-5-medium">Play</h2>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="card-text">
-              <p>1hr</p>
-              <p><span>Yesterday</span> - <span>2hrs</span></p>
+              <p class="text-3-light">1hr</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>2hrs</span>
+              </p>
             </div>
           </div>
         </div>
@@ -78,12 +80,14 @@
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h2>Study</h2>
+              <h2 class="text-5-medium">Study</h2>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="card-text">
-              <p>0hrs</p>
-              <p><span>Yesterday</span> - <span>1hr</span></p>
+              <p class="text-3-light">0hrs</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>1hr</span>
+              </p>
             </div>
           </div>
         </div>
@@ -93,12 +97,14 @@
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h2>Exercise</h2>
+              <h2 class="text-5-medium">Exercise</h2>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
             <div class="card-text">
-              <p>1hr</p>
-              <p><span>Yesterday</span> - <span>1hr</span></p>
+              <p class="text-3-light">1hr</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>1hr</span>
+              </p>
             </div>
           </div>
         </div>
@@ -108,12 +114,14 @@
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h2>Social</h2>
+              <h2 class="text-5-medium">Social</h2>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <div class="card-content">
-              <p>1hr</p>
-              <p><span>Yesterday</span> - <span>3hrs</span></p>
+            <div class="card-text">
+              <p class="text-3-light">1hr</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>3hrs</span>
+              </p>
             </div>
           </div>
         </div>
@@ -123,12 +131,14 @@
           </div>
           <div class="card-content">
             <div class="card-header">
-              <h2>Self Care</h2>
+              <h2 class="text-5-medium">Self Care</h2>
               <img src="./images/icon-ellipsis.svg" alt="" />
             </div>
-            <div class="card-content">
-              <p>0hrs</p>
-              <p><span>Yesterday</span> - <span>1hr</span></p>
+            <div class="card-text">
+              <p class="text-3-light">0hrs</p>
+              <p class="text-6-regular">
+                <span>Yesterday</span> - <span>1hr</span>
+              </p>
             </div>
           </div>
         </div>
