--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           </div>
         </div>
         <div class="profile-buttons">
-          <button class="btn text-5-regular">Daily</button>
-          <button class="btn text-5-regular active">Weekly</button>
-          <button class="btn text-5-regular">Monthly</button>
+          <button class="btn text-5-regular" type="button">Daily</button>
+          <button class="btn text-5-regular active" type="button">
+            Weekly
+          </button>
+          <button class="btn text-5-regular" type="button">Monthly</button>
         </div>
       </div>
 
