--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
           </div>
         </div>
         <div class="profile-buttons">
-          <button class="btn text-5-regular" type="button">Daily</button>
-          <button class="btn text-5-regular active" type="button">
+          <button id="daily" class="btn text-5-regular" type="button">
+            Daily
+          </button>
+          <button id="weekly" class="btn text-5-regular active" type="button">
             Weekly
           </button>
-          <button class="btn text-5-regular" type="button">Monthly</button>
+          <button id="monthly" class="btn text-5-regular" type="button">
+            Monthly
+          </button>
         </div>
       </div>
 
