Added ID's for buttons

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <h1 class="text-4-light">Jeremy Robson</h1>
           </div>
         </div>
-        <div class="profile-buttons">
-          <button id="daily" class="btn text-5-regular" type="button">
+        <div id="all-buttons" class="profile-buttons">
+          <button id="daily" class="btn text-5-regular active" type="button">
             Daily
           </button>
-          <button id="weekly" class="btn text-5-regular active" type="button">
+          <button id="weekly" class="btn text-5-regular" type="button">
             Weekly
           </button>
           <button id="monthly" class="btn text-5-regular" type="button">
