Added function for creating cards

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="card-container">
-        <div class="card card-1">
+        <!-- <div class="card card-1">
           <div class="card-img">
             <img src="./images/icon-work.svg" alt="" />
           </div>
@@ -147,7 +147,7 @@
               </p>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </main>
 
