Restructured card-header img/button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Work</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">5hrs</p>
@@ -70,7 +72,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Play</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">1hr</p>
@@ -87,7 +91,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Study</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">0hrs</p>
@@ -104,7 +110,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Exercise</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">1hr</p>
@@ -121,7 +129,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Social</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">1hr</p>
@@ -138,7 +148,9 @@
           <div class="card-content">
             <div class="card-header">
               <h2 class="text-5-medium">Self Care</h2>
-              <img src="./images/icon-ellipsis.svg" alt="" />
+              <button class="card-btn" type="button">
+                <img src="./images/icon-ellipsis.svg" alt="" />
+              </button>
             </div>
             <div class="card-text">
               <p class="text-3-light">0hrs</p>
