Finished all functions in script.js

--- a/index.html
+++ b/index.html
@@ -45,122 +45,7 @@
         </div>
       </div>
 
-      <div class="card-container">
-        <!-- <div class="card card-1">
-          <div class="card-img">
-            <img src="./images/icon-work.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Work</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">5hrs</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>7hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="card card-2">
-          <div class="card-img">
-            <img src="./images/icon-play.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Play</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">1hr</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>2hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="card card-3">
-          <div class="card-img">
-            <img src="./images/icon-study.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Study</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">0hrs</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>1hr</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="card card-4">
-          <div class="card-img">
-            <img src="./images/icon-exercise.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Exercise</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">1hr</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>1hr</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="card card-5">
-          <div class="card-img">
-            <img src="./images/icon-social.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Social</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">1hr</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>3hrs</span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="card card-6">
-          <div class="card-img">
-            <img src="./images/icon-self-care.svg" alt="" />
-          </div>
-          <div class="card-content">
-            <div class="card-header">
-              <h2 class="text-5-medium">Self Care</h2>
-              <button class="card-btn" type="button">
-                <img src="./images/icon-ellipsis.svg" alt="" />
-              </button>
-            </div>
-            <div class="card-text">
-              <p class="text-3-light">0hrs</p>
-              <p class="text-6-regular">
-                <span>Yesterday</span> - <span>1hr</span>
-              </p>
-            </div>
-          </div>
-        </div> -->
-      </div>
+      <div class="card-container"></div>
     </main>
 
     <script src="./script.js"></script>
